# assimilate

./: CMakeLists.txt  README.md
inc/: assimilate.hpp  config.hpp  understanding.hpp
src/: assimilate.cpp  understanding.cpp
